--- a/game1.html
+++ b/game1.html
@@ -11,9 +11,10 @@
     <a href="index.html" class="back-link">&#8592; Voltar para o Arcade</a>
     <div class="game_board_wrap">
         <img class="logo" src="assets/img/tetris-logo.png" alt="tetris-logo"/>
+        <div id="score">Pontuação: 0</div>
         <div id="game_board"></div>
-    </div>
 
+    </div>
     <script src="assets/js/game1.js"></script>
 </body>
 </html>
